src/objects/IBBQuotationItem__c.object
<CustomObject>
    <fields>
        <fullName>AcquisitionAmount__c</fullName>
        <label>AcquisitionAmount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinalAcquisitionPayment__c</fullName>
        <description>C00197</description>
        <label>FinalAcquisitionPayment</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstRentReviewDate__c</fullName>
        <description>c00197</description>
        <label>FirstRentReviewDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HPPRepaymentDate__c</fullName>
        <label>HPPRepaymentDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HPPStartDate__c</fullName>
        <label>HPPStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IBBQuotation__c</fullName>
        <label>IBBQuotation</label>
        <referenceTo>IBBQuotation__c</referenceTo>
        <relationshipName>IBBQuotationItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MonthlyPaymentFixed__c</fullName>
        <label>MonthlyPaymentFixed</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MonthlyPaymentVariable__c</fullName>
        <label>MonthlyPaymentVariable</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfMonthsFixed__c</fullName>
        <label>NumberOfMonthsFixed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfMonthsVariable__c</fullName>
        <label>NumberOfMonthsVariable</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfMonths__c</fullName>
        <label>NumberOfMonths</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_first_rent_review_date__c</fullName>
        <formula>IF(TEXT( IBBQuotation__r.Opportunity__r.IBB_Product__r.Fixed_or_Discounted__c ) = &apos;Fixed&apos; , IBBQuotation__r.Expiry_date_of_product__c , Variable_next_rent_review__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer first rent review date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductSwitchBalance__c</fullName>
        <label>ProductSwitchBalance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RatioPerPound__c</fullName>
        <label>RatioPerPound</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rent__c</fullName>
        <label>Rent</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RevertRate__c</fullName>
        <description>C00197</description>
        <label>RevertRate</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RunningBal__c</fullName>
        <label>RunningBal</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Str_Repayment_Date__c</fullName>
        <label>Repayment Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TheStartDate__c</fullName>
        <label>TheStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalAcquisitionFixed__c</fullName>
        <label>TotalAcquisitionFixed</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalAcquisitionVariable__c</fullName>
        <label>TotalAcquisitionVariable</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPaymentAfterFixedPeriod__c</fullName>
        <label>TotalPaymentAfterFixedPeriod</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRent__c</fullName>
        <label>TotalRent</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRentalFixed__c</fullName>
        <label>TotalRentalFixed</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalRentalVariable__c</fullName>
        <label>TotalRentalVariable</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalRepayment__c</fullName>
        <label>TotalRepayment</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variable_next_rent_review__c</fullName>
        <formula>CASE(FLOOR((MONTH(HPPStartDate__c + CASE(MOD(HPPStartDate__c - DATE(1989,8,21),7),4,4,5,3,6,2,1))-1)/3), 
0,DATE(YEAR(HPPStartDate__c+5),3,31 - 
CASE(MOD(DATE(YEAR(HPPStartDate__c),3,31)-DATE(1989,8,21),7),5,1,6,2,0)), 
1,DATE(YEAR(HPPStartDate__c),6,30 - 
CASE(MOD(DATE(YEAR(HPPStartDate__c),6,30)-DATE(1989,8,21),7),5,1,6,2,0)), 
2,DATE(YEAR(HPPStartDate__c),9,30 - 
CASE(MOD(DATE(YEAR(HPPStartDate__c),9,30)-DATE(1989,8,21),7),5,1,6,2,0)), 
DATE(YEAR(HPPStartDate__c - CASE(MOD(HPPStartDate__c - DATE(1989,8,21),7),5,1,6,2,0)),12,31 - 
CASE(MOD(DATE(YEAR(HPPStartDate__c),12,31)-DATE(1989,8,21),7),5,1,6,2,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variable next rent review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>repaymentdate1__c</fullName>
        <formula>DATEVALUE( Str_Repayment_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>repaymentdate1</label>
        <type>Date</type>
    </fields>
    <label>QuotationItem</label>
    <nameField>
        <label>IBBQuotationItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuotationItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>